# weather-frost-forecast

./: .gitignore  README.md  REPORT.md  notebook.ipynb  pyproject.toml  report.qmd  report_en.qmd
config/: config.yaml
data/models/: frost_classifier_gbt_full_metrics.json  frost_classifier_gbt_metrics.json  frost_classifier_gbt_p10_metrics.json
data/models/frost_classifier_gbt/metadata/: part-00000-6fd39c04-9029-4202-8998-8c97933aaab9-c000.txt
data/models/frost_classifier_gbt/stages/0_Imputer_fa51428c2abf/data/: part-00000-7e459152-6778-4db5-9a13-9862929773fc-c000.snappy.parquet
data/models/frost_classifier_gbt/stages/0_Imputer_fa51428c2abf/metadata/: part-00000-8ac31978-f474-440a-8d44-20157acb0b13-c000.txt
data/models/frost_classifier_gbt/stages/1_VectorAssembler_513a3e8751d0/metadata/: part-00000-ca886e48-b77c-4ada-a252-772dfbf14fcf-c000.txt
data/models/frost_classifier_gbt_full/metadata/: part-00000-e836b5d2-93a9-4bfa-bf00-1b788c9e57df-c000.txt
data/models/frost_classifier_gbt_p10/metadata/: part-00000-f1b74553-5b74-4a75-8030-be345839dde2-c000.txt
data/ref/: cornbelt_station_tmin.csv  world_stations_sample.csv
data/ref/global_frost_grid.parquet/: part-00000-25669881-88de-47ac-957c-309a9e7b893b-c000.snappy.parquet
docs/: APRESENTACAO_10MIN.md  AVALIACAO_RUBRICA.md  PYSPARK_CONCEPTS.md  SLIDE_AUTOCRITICA.md
src/ingestion/: download_ghcn.py  ingest_observations.py  ingest_stations.py  stream_ingest.py  utils.py
src/ml/: train_frost_classifier.py
src/processing/: build_gold.py  build_silver.py
(+15 files in other folders)
