[project]
name = "ghcn-bigdata"
version = "0.1.0"
description = "NOAA GHCN-Daily big-data pipeline (PySpark + MLlib)"
readme = "README.md"
# PySpark 3.5 supports up to Python 3.11. Pinning 3.11 to avoid surprises with JVM/py4j.
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyspark>=3.5.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "numpy>=1.26",   # required by pyspark.ml
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "ipython>=8.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
